Fix several small issues in references

--- a/3-text/furrow.html
+++ b/3-text/furrow.html
@@ -1274,10 +1274,10 @@ during morphogenesis</a>. <em>Curr. Opin. Genet. Dev.</em>
 </div>
 <div id="ref-Collinet2021-qa" class="csl-entry" role="doc-biblioentry">
 <div class="csl-left-margin">3. </div><div
-class="csl-right-inline">Collinet, C. &amp; Lecuit, T. Programmed and
-self-organized flow of information during morphogenesis. <em>Nat. Rev.
-Mol. Cell Biol.</em> (2021) doi:<a
-href="https://doi.org/10.1038/s41580-020-00318-6">10.1038/s41580-020-00318-6</a>.</div>
+class="csl-right-inline">Collinet, C. &amp; Lecuit, T. <a
+href="https://doi.org/10.1038/s41580-020-00318-6">Programmed and
+self-organized flow of information during morphogenesis</a>. <em>Nat.
+Rev. Mol. Cell Biol.</em> <strong>22</strong>, 245–265 (2021).</div>
 </div>
 <div id="ref-Hartenstein1985-zs" class="csl-entry"
 role="doc-biblioentry">
@@ -1314,11 +1314,11 @@ in <em><span>D</span>rosophila</em></a>. <em>Development</em>
 </div>
 <div id="ref-Eritano2020-mi" class="csl-entry" role="doc-biblioentry">
 <div class="csl-left-margin">8. </div><div
-class="csl-right-inline">Eritano, A. S. <em>et al.</em>
-<span>Tissue-Scale</span> mechanical coupling reduces morphogenetic
-noise to ensure precision during epithelial folding. <em>Dev. Cell</em>
-(2020) doi:<a
-href="https://doi.org/10.1016/j.devcel.2020.02.012">10.1016/j.devcel.2020.02.012</a>.</div>
+class="csl-right-inline">Eritano, A. S. <em>et al.</em> <a
+href="https://doi.org/10.1016/j.devcel.2020.02.012"><span>Tissue-Scale</span>
+mechanical coupling reduces morphogenetic noise to ensure precision
+during epithelial folding</a>. <em>Dev. Cell</em> <strong>53</strong>,
+212–228.e12 (2020).</div>
 </div>
 <div id="ref-Liu2013-lc" class="csl-entry" role="doc-biblioentry">
 <div class="csl-left-margin">9. </div><div class="csl-right-inline">Liu,
@@ -1342,8 +1342,8 @@ class="csl-right-inline">Costa, M., Sweeton, D. &amp; Wieschaus, E.
 Gastrulation in <em><span>D</span>rosophila</em>: Cellular mechanisms of
 morphogenetic movements. in <em>The development of
 <em><span>D</span>rosophila melanogaster</em></em> (eds. Bate, M. &amp;
-Arias, A. M.) vol. 1 425–465 (Cold Spring Harbor Laboratory Press, Cold
-Spring Harbor, NY, 1993).</div>
+Arias, A. M.) vol. 1 425–465 (Cold Spring Harbor Laboratory Press,
+1993).</div>
 </div>
 <div id="ref-Dicko2017-wz" class="csl-entry" role="doc-biblioentry">
 <div class="csl-left-margin">12. </div><div
@@ -1429,9 +1429,9 @@ morphogenesis and patterning</a>. <em>Cell</em> <strong>153</strong>,
 <div id="ref-Gramates2022-xe" class="csl-entry" role="doc-biblioentry">
 <div class="csl-left-margin">23. </div><div
 class="csl-right-inline">Gramates, L. S. <em>et al.</em> <a
-href="https://doi.org/10.1093/genetics/iyac035">Fly base: A guided tour
-of highlighted features</a>. <em>Genetics</em> <strong>220</strong>,
-iyac035 (2022).</div>
+href="https://doi.org/10.1093/genetics/iyac035"><span>FlyBase</span>: A
+guided tour of highlighted features</a>. <em>Genetics</em>
+<strong>220</strong>, iyac035 (2022).</div>
 </div>
 <div id="ref-Vellutini2023-ng" class="csl-entry" role="doc-biblioentry">
 <div class="csl-left-margin">24. </div><div
@@ -1458,10 +1458,11 @@ data</a>. <em>BMC Bioinformatics</em> <strong>18</strong>, 529
 </div>
 <div id="ref-Schmid2019-bm" class="csl-entry" role="doc-biblioentry">
 <div class="csl-left-margin">27. </div><div
-class="csl-right-inline">Schmid, B. <em>et al.</em> 3Dscript: Animating
+class="csl-right-inline">Schmid, B. <em>et al.</em> <a
+href="https://doi.org/10.1038/s41592-019-0359-1">3Dscript: Animating
 <span>3D/4D</span> microscopy data using a natural-language-based
-syntax. <em>Nat. Methods</em> (2019) doi:<a
-href="https://doi.org/10.1038/s41592-019-0359-1">10.1038/s41592-019-0359-1</a>.</div>
+syntax</a>. <em>Nat. Methods</em> <strong>16</strong>, 278–280
+(2019).</div>
 </div>
 <div id="ref-Weigert2018-ti" class="csl-entry" role="doc-biblioentry">
 <div class="csl-left-margin">28. </div><div
@@ -1485,16 +1486,16 @@ href="https://www.mathworks.com/products/matlab.html"><span>MATLAB</span></a>.
 </div>
 <div id="ref-Berg2019-ab" class="csl-entry" role="doc-biblioentry">
 <div class="csl-left-margin">31. </div><div
-class="csl-right-inline">Berg, S. <em>et al.</em> Ilastik: Interactive
-machine learning for (bio)image analysis. <em>Nat. Methods</em> (2019)
-doi:<a
+class="csl-right-inline">Berg, S. <em>et al.</em> <span
+class="nocase">i</span>lastik: Interactive machine learning for
+(bio)image analysis. <em>Nat. Methods</em> (2019) doi:<a
 href="https://doi.org/10.1038/s41592-019-0582-9">10.1038/s41592-019-0582-9</a>.</div>
 </div>
 <div id="ref-Vellutini2022-ya" class="csl-entry" role="doc-biblioentry">
 <div class="csl-left-margin">32. </div><div
 class="csl-right-inline">Vellutini, B. C. How to make cartographic
 projections using <span>ImSAnE</span>. (2022) doi:<a
-href="https://doi.org/10.5281/ZENODO.7628300">10.5281/ZENODO.7628300</a>.</div>
+href="https://doi.org/10.5281/zenodo.7628300">10.5281/zenodo.7628300</a>.</div>
 </div>
 <div id="ref-Arganda-Carreras2006-im" class="csl-entry"
 role="doc-biblioentry">
@@ -1592,8 +1593,9 @@ A laboratory handbook</a></em>. (Cold Spring Harbor Laboratory Press,
 role="doc-biblioentry">
 <div class="csl-left-margin">45. </div><div
 class="csl-right-inline">Campos-Ortega, J. A. &amp; Hartenstein, V.
-<em>The embryonic development of <em><span>D</span>rosophila
-melanogaster</em>:</em> (Springer Berlin Heidelberg, 1985). doi:<a
+<em>The embryonic development of <em><span>D</span>rosophila <span
+class="nocase">m</span>elanogaster</em></em>. (Springer Berlin
+Heidelberg, 1985). doi:<a
 href="https://doi.org/10.1007/978-3-662-02454-6">10.1007/978-3-662-02454-6</a>.</div>
 </div>
 <div id="ref-Jimenez-Guri2014-zs" class="csl-entry"
