--- a/3-text/furrow.html
+++ b/3-text/furrow.html
@@ -1237,11 +1237,12 @@ Burkon and Pavel Mejstrik for technical support. Jan Brugués and Keisuke
 Ishihara for the laser ablation setup, the MPI-CBG Light Microscopy
 Facility and Computer Services Facility for the generous support, and
 Sven Ssykor and Cornelia Maas for help with fly stocks. Steffen Lemke
-and Yu-Chiun Wang for cephalic furrow discussions. Michael Akam for
-drawing BCV’s attention to the cephalic furrow. Juliana Roscito for text
-revisions. AS was supported by funding from the European Union’s Horizon
-2020 Research and Innovation Programme under grant agreement no. 829010
-(PRIME). BCV was supported by an EMBO Long Term Fellowship (ALTF
+and Yu-Chiun Wang for cephalic furrow discussions. Juliana Roscito for
+text revisions and support. Michael Akam for drawing BCV’s attention to
+the cephalic furrow. This work was supported by the MPI-CBG core funding
+to CDM and PT. AS was supported by funding from the European Union’s
+Horizon 2020 Research and Innovation Programme under grant agreement no.
+829010 (PRIME). BCV was supported by an EMBO Long Term Fellowship (ALTF
 74-2018), and by an European Research Council Advanced Grant (ERC-AdG
 885504 GHOSTINTHESHELL) awarded to PT.</p>
 <h1 id="author-contributions">Author contributions</h1>
