--- a/3-text/furrow.html
+++ b/3-text/furrow.html
@@ -196,29 +196,28 @@ href="mailto:tomancak@mpi-cbg.de">Pavel Tomančák
 &lt;tomancak@mpi-cbg.de&gt;</a></p>
 <h1 id="abstract">Abstract</h1>
 <p>The cephalic furrow is a deep epithelial fold that demarcates the
-head–trunk boundary of fly embryos during gastrulation. It forms by
-active cellular mechanisms following an invariant morphogenetic sequence
-under strict genetic control. But unlike other embryonic invaginations,
-the cephalic furrow is transient and the invaginated cells do not give
-rise to any precursor tissues or larval structures. The cephalic furrow
-unfolds leaving no trace, and its function in development has remained
-elusive. Here we show that the cephalic furrow plays a mechanical role
-during <em>Drosophila</em> gastrulation. By live-imaging mutant embryos,
-we find that without the cephalic furrow, ectopic folds appear around
-the head–trunk interface indicating that the epithelial stability has
-been compromised. Using <em>in vivo</em> perturbations and <em>in
-silico</em> simulations, we demonstrate that ectopic folding in cephalic
-furrow mutants occurs due to the concomitant formation of mitotic
-domains and the extension of the germ band which increase the tissue
-strain in the head–trunk interface giving rise to mechanical
+head–trunk boundary of fly embryos during gastrulation. It forms under
+strict genetic control using active cellular mechanisms and follows an
+invariant morphogenetic sequence. But unlike other embryonic
+invaginations, the invaginated cells do not give rise to any precursor
+tissues or larval traits. The cephalic furrow is transient and unfolds
+leaving no trace. For these reasons, its function during development has
+remained elusive. Here we show that the cephalic furrow plays a
+mechanical role during <em>Drosophila</em> gastrulation. By live-imaging
+mutant embryos, we find that without the cephalic furrow, ectopic folds
+appear around the head–trunk interface indicating that the epithelial
+stability has been compromised. Using <em>in vivo</em> perturbations and
+<em>in silico</em> simulations, we demonstrate that ectopic folding in
+cephalic furrow mutants occurs due to the concomitant formation of
+mitotic domains and extension of the germ band. These events increase
+the tissue strain in the head–trunk interface giving rise to mechanical
 instabilities. Further, we show by simulations that an early
-pre-patterned invagination can effectively prevent the build up of
-compressive stresses by retaining a portion of the epithelial monolayer
-folded out-of-plane before other morphogenetic movements take place. Our
-findings suggest the cephalic furrow absorbs compressive stresses at the
-head–trunk boundary during fly gastrulation, and raise the hypothesis
-that mechanical forces may have played a role in the evolution of the
-cephalic furrow.</p>
+pre-patterned invagination can effectively prevent the build-up of
+compressive stresses by retaining epithelial tissue out-of-plane before
+other morphogenetic movements take place. Our findings suggest the
+cephalic furrow absorbs compressive stresses at the head–trunk boundary
+during fly gastrulation, and raise the hypothesis that mechanical forces
+may have played a role in the evolution of the cephalic furrow.</p>
 <!--TODO:AB: Because we don’t have force measurements, we may want to stick with strain. The idea is to say that the CF alleviates tissue strain because we can measure it directly, and only use this as evidence that the CF absorbs compressive stresses because we don’t have force measurements.-->
 <h1 id="main">Main</h1>
 <p>Epithelial folding is a fundamental process of animal
