Fix parentheses around plugin URLs

--- a/3-text/furrow.html
+++ b/3-text/furrow.html
@@ -998,8 +998,8 @@ data-cites="Legland2016-cp"><sup><a href="#ref-Legland2016-cp"
 role="doc-biblioref">34</a></sup></span> (<a
 href="https://imagej.net/plugins/morpholibj">imagej.net/plugins/morpholibj</a>)
 to segment, measure, and color-code the cell apical areas, and the
-plugin <em>Linear Stack Alignment with SIFT</em> <a
-href="https://imagej.net/plugins/linear-stack-alignment-with-sift">imagej.net/plugins/linear-stack-alignment-with-sift</a>
+plugin <em>Linear Stack Alignment with SIFT</em> (<a
+href="https://imagej.net/plugins/linear-stack-alignment-with-sift">imagej.net/plugins/linear-stack-alignment-with-sift</a>)
 to register cells between timepoints.</p>
 <h2 id="laser-cauterization-experiments">Laser cauterization
 experiments</h2>
@@ -1222,8 +1222,8 @@ role="doc-biblioref">42</a></sup></span>, and Python 3.10.7 using
 Jupyter notebooks<span class="citation"
 data-cites="Granger2021-zg"><sup><a href="#ref-Granger2021-zg"
 role="doc-biblioref">43</a></sup></span>. The data, scripts, and
-analyses pipelines are available in a Git repository at <a
-href="https://github.com/bruvellu/cephalic-furrow">github.com/bruvellu/cephalic-furrow</a>
+analyses pipelines are available in a Git repository (<a
+href="https://github.com/bruvellu/cephalic-furrow">github.com/bruvellu/cephalic-furrow</a>)
 and have been deposited in Zenodo<span class="citation"
 data-cites="Vellutini2023-ng"><sup><a href="#ref-Vellutini2023-ng"
 role="doc-biblioref">24</a></sup></span>.</p>
