--- a/3-text/furrow.html
+++ b/3-text/furrow.html
@@ -523,39 +523,40 @@ reference point to compare and analyze the simulation results.</p>
 <!--TODO:AB: Describe overfolding events. Mark them on phase diagram. Discuss as limitation-->
 <p>To obtain realistic values where the model matches experimental
 observations, we performed a sweep across the bending rigidity parameter
-space in mutant conditions without the cephalic furrow. We quantified
+space in mutant conditions (without the cephalic furrow). We quantified
 the tissue dynamics by measuring the distance of each particle to the
-vitelline envelope across iterations. We defined a fold when this
-distance was greater than the maximum particle depth under the ground
-noise level. Under the baseline condition without mitotic domains or
-germ band extension (only noise), we observe no ectopic fold formation
-for any bending rigidity values (Figure <a href="#fig:model">3</a>e).
-The probability of buckling increases with the germ band extension and
-inversely with the bending rigidity (Figure <a href="#fig:model">3</a>e,
-Figure <a href="#fig:model-features">S6</a>b). We observe a buckling
-transition in the phase space in softer conditions
-(<math display="inline" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><msubsup><mi>K</mi><mi>b</mi><mo>*</mo></msubsup><mo>≈</mo><mn>0.7</mn><mo>×</mo><msup><mn>10</mn><mrow><mo>−</mo><mn>4</mn></mrow></msup></mrow><annotation encoding="application/x-tex">K_b^* \approx 0.7 \times 10^{−4}</annotation></semantics></math>)
-already at 10% germ band extension, but in stiffer conditions
+vitelline envelope across iterations. When this distance was greater
+than the maximum particle depths under the ground noise level, we
+counted it as a fold. In simulations under a baseline condition, without
+mitotic domains or germ band extension but with noise, we observe no
+ectopic fold formation for any bending rigidity values (Figure <a
+href="#fig:model">3</a>e). The probability of buckling increases with
+the amount of germ band extension, mainly in lower bending rigidities
+(Figure <a href="#fig:model">3</a>e, Figure <a
+href="#fig:model-features">S6</a>b). At 10% germ band extension, we
+observe a buckling transition in the phase space of softer conditions
+(<math display="inline" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><msubsup><mi>K</mi><mi>b</mi><mo>*</mo></msubsup><mo>≈</mo><mn>0.7</mn><mo>×</mo><msup><mn>10</mn><mrow><mo>−</mo><mn>4</mn></mrow></msup></mrow><annotation encoding="application/x-tex">K_b^* \approx 0.7 \times 10^{−4}</annotation></semantics></math>),
+but in stiffer conditions
 (<math display="inline" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><msubsup><mi>K</mi><mi>b</mi><mo>*</mo></msubsup><mo>≈</mo><mn>1.2</mn><mo>×</mo><msup><mn>10</mn><mrow><mo>−</mo><mn>4</mn></mrow></msup></mrow><annotation encoding="application/x-tex">K_b^* \approx 1.2 \times 10^{−4}</annotation></semantics></math>)
-the germ band alone cannot drive the formation of ectopic folds even at
-its maximum extension (Figure <a href="#fig:model">3</a>e, Figure <a
-href="#fig:model-features">S6</a>b). Adding mitotic domains to the
-simulations caused a shift in the phase diagram, with the probability of
-ectopic fold formation increasing even in low values of germ band
-extension and higher values of bending rigidity (Figure <a
-href="#fig:model">3</a>f, Figure <a href="#fig:model-features">S6</a>c).
-Mitotic domains alone can induce ectopic folds in softer conditions
-(<math display="inline" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><msubsup><mi>K</mi><mi>b</mi><mo>*</mo></msubsup><mo>&lt;</mo><mn>1.1</mn><mo>×</mo><msup><mn>10</mn><mrow><mo>−</mo><mn>4</mn></mrow></msup></mrow><annotation encoding="application/x-tex">K_b^* &lt; 1.1 \times 10^{−4}</annotation></semantics></math>).
-For most of the parameter space, the combined action of mitotic domains
-and germ band maximizes the probability of ectopic fold formation
-(Figure <a href="#fig:model">3</a>e,f). These simulations show that
-above a certain bending rigidity
-(<math display="inline" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><msubsup><mi>K</mi><mi>b</mi><mo>*</mo></msubsup><mo>&gt;</mo><mn>1.0</mn><mo>×</mo><msup><mn>10</mn><mrow><mo>−</mo><mn>4</mn></mrow></msup></mrow><annotation encoding="application/x-tex">K_b^* &gt; 1.0 \times 10^{−4}</annotation></semantics></math>),
-neither the mitotic domains nor the germ band can drive ectopic folding
-by themselves. We thus set to test these predictions <em>in vivo</em> by
-performing perturbation experiments to individually inhibit the
-formation of mitotic domains and the extension of the germ band.</p>
-<!--TODO: Resolve issue with model/experiment reasoning. Which predictions?-->
+the germ band alone, even at its maximum extension, cannot drive the
+formation of ectopic folds (Figure <a href="#fig:model">3</a>e,
+Figure <a href="#fig:model-features">S6</a>b). Adding mitotic domains to
+the simulations changed the phase diagram and dynamics of ectopic
+folding. We observe that mitotic domains alone can induce ectopic folds
+in softer conditions
+(<math display="inline" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><msubsup><mi>K</mi><mi>b</mi><mo>*</mo></msubsup><mo>&lt;</mo><mn>1.1</mn><mo>×</mo><msup><mn>10</mn><mrow><mo>−</mo><mn>4</mn></mrow></msup></mrow><annotation encoding="application/x-tex">K_b^* &lt; 1.1 \times 10^{−4}</annotation></semantics></math>)
+and that the number of folds increased for low values of germ band
+extension (Figure <a href="#fig:model">3</a>f). In addition, the timing
+of folding with mitotic domains has decreased across iterations in
+simulations, specially between 0–20% of germ band extension (Figure <a
+href="#fig:model-features">S6</a>c). These simulations suggest that,
+depending on the bending rigidity, the germ band or mitotic domains
+alone can drive ectopic folding, and that their combined action may
+increase the mechanical instabilities in the blastoderm epithelium. We
+thus set to test the individual contribution of mitotic domains and germ
+band to the epithelial instability by performing perturbation
+experiments <em>in vivo</em>.</p>
+<!--These simulations show that above a certain bending rigidity ($K_b^* > 1.0 \times 10^{−4}$), neither the mitotic domains nor the germ band can drive ectopic folding by themselves.-->
 <!--TODO: Add panel with the threshold for counting folds-->
 <!--TODO:AB: Give a physics-based estimation of order of magnitude of dimensionless parameter from literature. Good sanity check to see if values are not off the charts!-->
 <p>We first asked whether the extension of the germ band alone can
@@ -1744,7 +1745,7 @@ the tip of the germ band. Scale bars = 50µm.</figcaption>
 <div id="fig:model" class="fignos">
 <figure>
 <img src="figures/Fig3.jpg" style="width:100.0%"
-alt="Figure 3: Model and simulations of the tissue mechanics at the head–trunk boundary. a, Region of interest of the model. One side of a frontal slice across a slightly dorsal plane of the embryonic blastoderm. It follows the embryo shape, its proportions, and the relative positions of mitotic domains, cephalic furrow, and germ band. b, Characteristics of the individual components of the model based on particles connected by springs. The drawings exemplify the initial and final states for each component. c, Energy equation with a stretching and a bending component, and the dimensionless bending rigidity. Inital rod length (L_o), stretching energy (W_s), stretching rigidity (K_s), initial spring length (ds_o), current spring length (ds), bending energy (W_b), bending rigidity (K_b), initial curvature (\kappa_o), current curvature (\kappa), semi-major embryonic axis (L). d, Plots showing the energy dynamics across iterations in a typical simulation run. The stretching energy dominates and goes down with the iterations. The bending energy, which is a few orders of magnitude lower, increases drastically reaching a peak that diminishes gradually with the iterations. The total energy of the system goes down to equilibrium. e, Mutant parameter sweep without mitotic domains (no cephalic furrow). The heatmap shows the average number of ectopic folds for different bending rigidities and percentages of germ band extension. Ectopic folding frequency increases with lower bending rigidities (softer tissue) and with greater values of germ band extension. The white square outline indicates the K_b^* value where the number of folds begins to fall below 1 at maximum germ band extension. f, Mutant parameter sweep with mitotic domains (no cephalic furrow). The phase diagram is shifted left in relation to f. The addition of mitotic domains maximizes the formation of ectopic folds even without germ band extension. The white square outline indicates the K_b^* value where the number of folds begins to fall below 1 at minimum germ band extension. g, Quantification of ectopic folding to evaluate the effectiveness of the cephalic furrow. The top row shows a control simulating a cephalic furrow mutant condition with mitotic domains and germ band. The middle row shows an active cephalic furrow invagination with mitotic domains forming at the same time without delay. The bottom row shows the cephalic furrow with a delay in mitotic domain formation. h, Representative seeds from the simulations in j at 0 and 40% germ band extension." />
+alt="Figure 3: Model and simulations of the tissue mechanics at the head–trunk boundary. a, Region of interest of the model. One side of a frontal slice across a slightly dorsal plane of the embryonic blastoderm. It follows the embryo shape, its proportions, and the relative positions of mitotic domains, cephalic furrow, and germ band. b, Characteristics of the individual components of the model based on particles connected by springs. The drawings exemplify the initial and final states for each component. c, Energy equation with a stretching and a bending component, and the dimensionless bending rigidity. Inital rod length (L_o), stretching energy (W_s), stretching rigidity (K_s), initial spring length (ds_o), current spring length (ds), bending energy (W_b), bending rigidity (K_b), initial curvature (\kappa_o), current curvature (\kappa), semi-major embryonic axis (L). d, Plots showing the energy dynamics across iterations in a typical simulation run. The stretching energy dominates and goes down with the iterations. The bending energy, which is a few orders of magnitude lower, increases drastically reaching a peak that diminishes gradually with the iterations. The total energy of the system goes down to equilibrium. e, Mutant parameter sweep without mitotic domains (no cephalic furrow). The heatmap shows the average number of ectopic folds for different bending rigidities and percentages of germ band extension. Ectopic folding frequency increases with lower bending rigidities (softer tissue) and with greater values of germ band extension. Outlined in white is the baseline condition without mitotic domains and germ band and only ground level noise (i), and the germ band only condition with higher number of folding events (ii). f, Mutant parameter sweep with mitotic domains (no cephalic furrow). The phase diagram is shifted left in relation to f. The addition of mitotic domains maximizes the formation of ectopic folds even without germ band extension, a condition outlined in white (iii). g, Quantification of ectopic folding to evaluate the effectiveness of the cephalic furrow. The top row shows a control simulating a cephalic furrow mutant condition with mitotic domains and germ band. The middle row shows an active cephalic furrow invagination with mitotic domains forming at the same time without delay. The bottom row shows the cephalic furrow with a delay in mitotic domain formation. h, Representative seeds from the simulations in j at 0 and 40% germ band extension." />
 <figcaption aria-hidden="true"><span>Figure 3:</span> Model and
 simulations of the tissue mechanics at the head–trunk boundary.
 <strong>a</strong>, Region of interest of the model. One side of a
@@ -1785,24 +1786,21 @@ mitotic domains (no cephalic furrow). The heatmap shows the average
 number of ectopic folds for different bending rigidities and percentages
 of germ band extension. Ectopic folding frequency increases with lower
 bending rigidities (softer tissue) and with greater values of germ band
-extension. The white square outline indicates the
-<math display="inline" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><msubsup><mi>K</mi><mi>b</mi><mo>*</mo></msubsup><annotation encoding="application/x-tex">K_b^*</annotation></semantics></math>
-value where the number of folds begins to fall below 1 at maximum germ
-band extension. <strong>f</strong>, Mutant parameter sweep with mitotic
-domains (no cephalic furrow). The phase diagram is shifted left in
-relation to <strong>f</strong>. The addition of mitotic domains
-maximizes the formation of ectopic folds even without germ band
-extension. The white square outline indicates the
-<math display="inline" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><msubsup><mi>K</mi><mi>b</mi><mo>*</mo></msubsup><annotation encoding="application/x-tex">K_b^*</annotation></semantics></math>
-value where the number of folds begins to fall below 1 at minimum germ
-band extension. <strong>g</strong>, Quantification of ectopic folding to
-evaluate the effectiveness of the cephalic furrow. The top row shows a
-control simulating a cephalic furrow mutant condition with mitotic
-domains and germ band. The middle row shows an active cephalic furrow
-invagination with mitotic domains forming at the same time without
-delay. The bottom row shows the cephalic furrow with a delay in mitotic
-domain formation. <strong>h</strong>, Representative seeds from the
-simulations in <strong>j</strong> at 0 and 40% germ band
+extension. Outlined in white is the baseline condition without mitotic
+domains and germ band and only ground level noise (i), and the germ band
+only condition with higher number of folding events (ii).
+<strong>f</strong>, Mutant parameter sweep with mitotic domains (no
+cephalic furrow). The phase diagram is shifted left in relation to
+<strong>f</strong>. The addition of mitotic domains maximizes the
+formation of ectopic folds even without germ band extension, a condition
+outlined in white (iii). <strong>g</strong>, Quantification of ectopic
+folding to evaluate the effectiveness of the cephalic furrow. The top
+row shows a control simulating a cephalic furrow mutant condition with
+mitotic domains and germ band. The middle row shows an active cephalic
+furrow invagination with mitotic domains forming at the same time
+without delay. The bottom row shows the cephalic furrow with a delay in
+mitotic domain formation. <strong>h</strong>, Representative seeds from
+the simulations in <strong>j</strong> at 0 and 40% germ band
 extension.</figcaption>
 </figure>
 </div>
