--- a/3-text/furrow.html
+++ b/3-text/furrow.html
@@ -2462,29 +2462,33 @@ compared to sibling controls or wildtype embryos. Scale bar =
 <div id="fig:cf-sweep" class="fignos">
 <figure>
 <img src="figures/FigS8.jpg" data-tag="S8" style="width:100.0%"
-alt="Figure S8: Parameter sweep for cephalic furrow simulations. a, Bending rigidity and cephalic furrow depth at different values of KCF and germ band extension. Values above 0.2 exhibit a clear peak in bending energy for most conditions and the depth reaches a plateau across iterations. The cephalic furrow depth at the peak of bending energy (max bend) and at the final iteration is similar for simulations with 0% of germ band extension. At higher percentages of germ band extension the folds (both cephalic furrow and ectopic folds) exhibit a greater depth at the last iteration. b, Finer-grained parameter sweep of ectopic folding without (TMD=0) and with (TMD=5) a delay in cephalic furrow formation. With simultaneous formation, only higher values of KCF are effective in buffering the formation of ectopic folds around the cephalic furrow region. This is also limited to low percentages of germ band extension since at higher percentages there is an increase in the frequency of ectopic folding. When a delay in mitotic formation is present, even low values of KCF are effective in preventing the formation of ectopic folds. In this condition, the extension of the germ band increases the formation of ectopic folds, but only at the posterior regions close to the germ band tip. This suggests that the initiation of the cephalic furrow is crucial to its ability to buffer the ectopic folding." />
+alt="Figure S8: Parameter sweep for cephalic furrow simulations. a, Bending rigidity and cephalic furrow depth at different values of \kappa_o^{CF} and germ band extension. Values above 0.2 exhibit a clear peak in bending energy for most conditions and the depth reaches a plateau across iterations. The cephalic furrow depth at the peak of bending energy (max bend) and at the final iteration is similar for simulations with 0% of germ band extension. At higher percentages of germ band extension the folds (both cephalic furrow and ectopic folds) exhibit a greater depth at the last iteration. b, Finer-grained parameter sweep of ectopic folding without (TMD=0) and with (TMD=5) a delay in cephalic furrow formation. With simultaneous formation, only higher values of \kappa_o^{CF} are effective in buffering the formation of ectopic folds around the cephalic furrow region. This is also limited to low percentages of germ band extension since at higher percentages there is an increase in the frequency of ectopic folding. When a delay in mitotic formation is present, even low values of \kappa_o^{CF} are effective in preventing the formation of ectopic folds. In this condition, the extension of the germ band increases the formation of ectopic folds, but only at the posterior regions close to the germ band tip. This suggests that the initiation of the cephalic furrow is crucial to its ability to buffer the ectopic folding." />
 <figcaption aria-hidden="true"><span>Figure S8:</span> Parameter sweep
 for cephalic furrow simulations. <strong>a</strong>, Bending rigidity
-and cephalic furrow depth at different values of KCF and germ band
-extension. Values above 0.2 exhibit a clear peak in bending energy for
-most conditions and the depth reaches a plateau across iterations. The
-cephalic furrow depth at the peak of bending energy (max bend) and at
-the final iteration is similar for simulations with 0% of germ band
-extension. At higher percentages of germ band extension the folds (both
-cephalic furrow and ectopic folds) exhibit a greater depth at the last
-iteration. <strong>b</strong>, Finer-grained parameter sweep of ectopic
-folding without (TMD=0) and with (TMD=5) a delay in cephalic furrow
-formation. With simultaneous formation, only higher values of KCF are
-effective in buffering the formation of ectopic folds around the
+and cephalic furrow depth at different values of
+<math display="inline" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><msubsup><mi>κ</mi><mi>o</mi><mrow><mi>C</mi><mi>F</mi></mrow></msubsup><annotation encoding="application/x-tex">\kappa_o^{CF}</annotation></semantics></math>
+and germ band extension. Values above 0.2 exhibit a clear peak in
+bending energy for most conditions and the depth reaches a plateau
+across iterations. The cephalic furrow depth at the peak of bending
+energy (max bend) and at the final iteration is similar for simulations
+with 0% of germ band extension. At higher percentages of germ band
+extension the folds (both cephalic furrow and ectopic folds) exhibit a
+greater depth at the last iteration. <strong>b</strong>, Finer-grained
+parameter sweep of ectopic folding without (TMD=0) and with (TMD=5) a
+delay in cephalic furrow formation. With simultaneous formation, only
+higher values of
+<math display="inline" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><msubsup><mi>κ</mi><mi>o</mi><mrow><mi>C</mi><mi>F</mi></mrow></msubsup><annotation encoding="application/x-tex">\kappa_o^{CF}</annotation></semantics></math>
+are effective in buffering the formation of ectopic folds around the
 cephalic furrow region. This is also limited to low percentages of germ
 band extension since at higher percentages there is an increase in the
 frequency of ectopic folding. When a delay in mitotic formation is
-present, even low values of KCF are effective in preventing the
-formation of ectopic folds. In this condition, the extension of the germ
-band increases the formation of ectopic folds, but only at the posterior
-regions close to the germ band tip. This suggests that the initiation of
-the cephalic furrow is crucial to its ability to buffer the ectopic
-folding.</figcaption>
+present, even low values of
+<math display="inline" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><msubsup><mi>κ</mi><mi>o</mi><mrow><mi>C</mi><mi>F</mi></mrow></msubsup><annotation encoding="application/x-tex">\kappa_o^{CF}</annotation></semantics></math>
+are effective in preventing the formation of ectopic folds. In this
+condition, the extension of the germ band increases the formation of
+ectopic folds, but only at the posterior regions close to the germ band
+tip. This suggests that the initiation of the cephalic furrow is crucial
+to its ability to buffer the ectopic folding.</figcaption>
 </figure>
 </div>
 <!--TODO: Replace with newer simulations-->
