Add data availability section in methods

--- a/3-text/furrow.html
+++ b/3-text/furrow.html
@@ -1216,8 +1216,8 @@ href="#ref-HandBrake_Team2003-fq"
 role="doc-biblioref">40</a></sup></span>. The high-resolution figures
 and videos are available in a Zenodo repository<span class="citation"
 data-cites="Vellutini2023-ix"><sup><a href="#ref-Vellutini2023-ix"
-role="doc-biblioref">41</a></sup></span>. All data wrangling,
-statistical analyses, and plotting performed in R v4.2.1<span
+role="doc-biblioref">41</a></sup></span>. We performed the data
+wrangling, statistical analyses, and plotting in R v4.2.1<span
 class="citation" data-cites="R_Core_Team1993-ki"><sup><a
 href="#ref-R_Core_Team1993-ki" role="doc-biblioref">42</a></sup></span>
 using RStudio v2022.7.2.576<span class="citation"
@@ -1225,12 +1225,43 @@ data-cites="RStudio_Team2011-wr"><sup><a href="#ref-RStudio_Team2011-wr"
 role="doc-biblioref">43</a></sup></span>, and Python 3.10.7 using
 Jupyter notebooks<span class="citation"
 data-cites="Granger2021-zg"><sup><a href="#ref-Granger2021-zg"
-role="doc-biblioref">44</a></sup></span>. The data, scripts, and
-analyses pipelines are available in a Git repository (<a
-href="https://github.com/bruvellu/cephalic-furrow">github.com/bruvellu/cephalic-furrow</a>)
-and have been deposited in Zenodo<span class="citation"
+role="doc-biblioref">44</a></sup></span>. All the data and analyses
+pipelines were deposited in a Zenodo repository<span class="citation"
 data-cites="Vellutini2023-ng"><sup><a href="#ref-Vellutini2023-ng"
 role="doc-biblioref">24</a></sup></span>.</p>
+<h2 id="data-availability">Data availability</h2>
+<ul>
+<li>Data, scripts and analyses<span class="citation"
+data-cites="Vellutini2023-ng"><sup><a href="#ref-Vellutini2023-ng"
+role="doc-biblioref">24</a></sup></span>:
+<ul>
+<li><a
+href="https://github.com/bruvellu/cephalic-furrow">github.com/bruvellu/cephalic-furrow</a>
+(Git repository)</li>
+<li><a
+href="https://zenodo.org/record/7781948">zenodo.org/record/7781948</a>
+(Zenodo record)</li>
+</ul></li>
+<li>Model and simulations<span class="citation"
+data-cites="Krishna2023-hu"><sup><a href="#ref-Krishna2023-hu"
+role="doc-biblioref">37</a></sup></span>:
+<ul>
+<li><a
+href="https://github.com/abhijeetkrishna/cephalic-furrow-theory">github.com/abhijeetkrishna/cephalic-furrow-theory</a>
+(Git repository)</li>
+<li><a
+href="https://zenodo.org/record/7784907">zenodo.org/record/7784907</a>
+(Zenodo record)</li>
+</ul></li>
+<li>Figures and videos<span class="citation"
+data-cites="Vellutini2023-ix"><sup><a href="#ref-Vellutini2023-ix"
+role="doc-biblioref">41</a></sup></span>:
+<ul>
+<li><a
+href="https://zenodo.org/record/7784907">zenodo.org/record/7784907</a>
+(Zenodo record)</li>
+</ul></li>
+</ul>
 <h1 id="acknowledgements">Acknowledgements</h1>
 <p>We thank all current and former LoPaTs for the discussions and
 support during this project. Akanksha Jain and Vladimir Ulman for
