--- a/3-text/furrow.html
+++ b/3-text/furrow.html
@@ -474,65 +474,66 @@ morphological proportions (Figure <a href="#fig:model">3</a>a, Figure <a
 href="#fig:proportions">S5</a>). The blastoderm is modeled by an
 elliptical arc of equidistant particles connected by springs and
 enclosed on one side by a rigid barrier representing the vitelline
-envelope (Figure <a href="#fig:model">3</a>b). This elastic rod of
-length
-<math display="inline" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><msub><mi>L</mi><mi>o</mi></msub><annotation encoding="application/x-tex">L_o</annotation></semantics></math>
-has a stretching energy component
-(<math display="inline" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><msub><mi>W</mi><mi>s</mi></msub><annotation encoding="application/x-tex">W_s</annotation></semantics></math>),
-defined as the sum of stretching rigidities
-(<math display="inline" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><msub><mi>K</mi><mi>s</mi></msub><annotation encoding="application/x-tex">K_s</annotation></semantics></math>)
-dependent on the ratio between the current and initial spring lengths
-(<math display="inline" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mi>d</mi><mi>s</mi><mi>/</mi><mi>d</mi><msub><mi>s</mi><mi>o</mi></msub></mrow><annotation encoding="application/x-tex">ds/ds_o</annotation></semantics></math>),
+envelope (Figure <a href="#fig:model">3</a>b). The total energy of this
+tissue
+(<math display="inline" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><msub><mi>W</mi><mi>T</mi></msub><annotation encoding="application/x-tex">W_T</annotation></semantics></math>)
+is a sum of a stretching energy component
+(<math display="inline" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><msub><mi>W</mi><mi>s</mi></msub><annotation encoding="application/x-tex">W_s</annotation></semantics></math>)
 and a bending energy component
-(<math display="inline" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><msub><mi>W</mi><mi>b</mi></msub><annotation encoding="application/x-tex">W_b</annotation></semantics></math>),
-defined as the sum of bending rigidities
-(<math display="inline" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><msub><mi>K</mi><mi>b</mi></msub><annotation encoding="application/x-tex">K_b</annotation></semantics></math>)
-dependent on the difference between the current and initial curvatures
-of the rod
-(<math display="inline" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mi>κ</mi><mo>−</mo><msub><mi>κ</mi><mi>o</mi></msub></mrow><annotation encoding="application/x-tex">\kappa-\kappa_o</annotation></semantics></math>)
-(Figure <a href="#fig:model">3</a>c). The sum of stretching and bending
-energies returns the total energy of the system
-(<math display="inline" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><msub><mi>W</mi><mi>T</mi></msub><annotation encoding="application/x-tex">W_T</annotation></semantics></math>),
-while the ratio between both rigidities returns a single, physically
-meaningful parameter of our model—the dimensionless bending rigidity
-(<math display="inline" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><msubsup><mi>K</mi><mi>b</mi><mo>*</mo></msubsup><annotation encoding="application/x-tex">K_b^*</annotation></semantics></math>)
+(<math display="inline" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><msub><mi>W</mi><mi>b</mi></msub><annotation encoding="application/x-tex">W_b</annotation></semantics></math>)
+(Figure <a href="#fig:model">3</a>c). Each of these components have a
+rigidity associated with them.
+<math display="inline" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><msub><mi>K</mi><mi>s</mi></msub><annotation encoding="application/x-tex">K_s</annotation></semantics></math>
+is the stretching rigidity and
+<math display="inline" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><msub><mi>K</mi><mi>b</mi></msub><annotation encoding="application/x-tex">K_b</annotation></semantics></math>
+is the bending rigidity. These two parameters can be combined into a
+single dimensionless bending rigidity,
+<math display="inline" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><msubsup><mi>K</mi><mi>b</mi><mo>*</mo></msubsup><annotation encoding="application/x-tex">K_b^*</annotation></semantics></math>
 (Figure <a href="#fig:model">3</a>c). To simulate the physical
 interactions between mitotic domains, germ band, and cephalic furrow, we
-defined the mitotic domains as regions of compressed springs which tend
-to expand, and the cephalic furrow as a narrow region having an
-intrinsic negative curvature predisposing the particles to invaginate
-(Figure <a href="#fig:model">3</a>b). The germ band in our model is
-defined by the position of the posterior-most particle which is fixed at
-different percentages of egg length for each simulation (Figure <a
-href="#fig:model">3</a>b). Finally, to run the simulations we added a
-ground level of random noise, and iterated the model towards an
-equilibrium in the total energy of the system.</p>
+defined the mitotic domains as compressed regions which tend to expand,
+and the cephalic furrow as a narrow region having an intrinsic negative
+curvature predisposing the tissue to invaginate (Figure <a
+href="#fig:model">3</a>b). The germ band in our model is defined by the
+position of the posterior end of the tissue which is fixed at different
+fractions of egg length
+(<math display="inline" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mi>g</mi><annotation encoding="application/x-tex">g</annotation></semantics></math>)
+for each simulation (Figure <a href="#fig:model">3</a>b). The effect of
+germ band extension appears as a global compression in the blastoderm.
+Finally, to run the simulations we added a ground level of random noise,
+and iterated the model towards an equilibrium in the total energy of the
+system.</p>
+<!--This elastic rod of length $L_o$ has a stretching energy component ($W_s$), defined as the sum of stretching rigidities ($K_s$) dependent on the ratio between the current and initial spring lengths ($ds/ds_o$), and a bending energy component ($W_b$), defined as the sum of bending rigidities ($K_b$) dependent on the difference between the current and initial curvatures of the rod ($\kappa-\kappa_o$) ({@fig:model}c).-->
+<!--The sum of stretching and bending energies returns the total energy of the system ($W_T$), while the ratio between both rigidities returns a single, physically meaningful parameter of our model---the dimensionless bending rigidity ($K_b^*$) ({@fig:model}c).-->
+<!--To simulate the physical interactions between mitotic domains, germ band, and cephalic furrow, we defined the mitotic domains as regions of compressed springs which tend to expand, and the cephalic furrow as a narrow region having an intrinsic negative curvature predisposing the particles to invaginate ({@fig:model}b).-->
+<!--The germ band in our model is defined by the position of the posterior-most particle which is fixed at different percentages of egg length for each simulation ({@fig:model}b).-->
 <p>We first characterized the general properties of the model. In
 simulations where folds begin to form, the bending energy increases
-releasing a larger amount of stretching energy which in turn makes the
-total energy of the system decrease over the iterations (Figure <a
+while releasing a larger amount of stretching energy which in turn
+decreases the total energy of the system over the iterations (Figure <a
 href="#fig:model">3</a>d). The increase in bending energy coincides with
 a rapid deepening of the fold. Once the bending energy reaches a peak,
 the fold continues to deepen, though more gradually, but the number of
 folds stabilizes and there are rarely changes in the overall folding
 patterns (Figure <a href="#fig:model">3</a>d, Figure <a
-href="#fig:model-features">S6</a>a). Since folding events are stochastic
-and can happen at different iterations across different simulations, and
-because we are mainly interested in analyzing the initial position and
-dynamics of the folding, we used the peak of bending energy as the
-reference point to compare and analyze the simulation results.</p>
+href="#fig:model-features">S6</a>a). Folding events are stochastic and
+can happen at different iterations across different simulations. Also,
+we are mainly interested in analyzing the initial position and the
+number of folding events in each simulation. Hence, we used the state of
+each simulation at the peak of its bending energy as the reference point
+to compare with other simulations.</p>
+<!--We first characterized the general properties of the model.-->
+<!--In simulations where folds begin to form, the bending energy increases releasing a larger amount of stretching energy which in turn makes the total energy of the system decrease over the iterations ({@fig:model}d).-->
+<!--The increase in bending energy coincides with a rapid deepening of the fold.-->
+<!--Once the bending energy reaches a peak, the fold continues to deepen, though more gradually, but the number of folds stabilizes and there are rarely changes in the overall folding patterns ({@fig:model}d, {@fig:model-features}a).-->
+<!--Since folding events are stochastic and can happen at different iterations across different simulations, and because we are mainly interested in analyzing the initial position and dynamics of the folding, we used the peak of bending energy as the reference point to compare and analyze the simulation results.-->
 <!--TODO:AB: Describe overfolding events. Mark them on phase diagram. Discuss as limitation-->
-<p>To obtain realistic values where the model matches experimental
-observations, we performed a sweep across the bending rigidity parameter
-space in mutant conditions (without the cephalic furrow). We quantified
-the tissue dynamics by measuring the distance of each particle to the
-vitelline envelope across iterations. When this distance was greater
-than the maximum particle depths under the ground noise level, we
-counted it as a fold. In simulations under a baseline condition, without
-mitotic domains or germ band extension but with noise, we observe no
-ectopic fold formation for any bending rigidity values (Figure <a
-href="#fig:model">3</a>e). The probability of buckling increases with
-the amount of germ band extension, mainly in lower bending rigidities
+<p>To obtain realistic values of the dimensionless bending rigidity
+<math display="inline" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><msubsup><mi>K</mi><mi>b</mi><mo>*</mo></msubsup><annotation encoding="application/x-tex">K_b^*</annotation></semantics></math>
+where the model matches experimental observations, we performed a sweep
+across the parameter space in mutant conditions (without the cephalic
+furrow). As expected, the probability of buckling increases with the
+amount of germ band extension, mainly in lower bending rigidities
 (Figure <a href="#fig:model">3</a>e, Figure <a
 href="#fig:model-features">S6</a>b). At 10% germ band extension, we
 observe a buckling transition in the phase space of softer conditions
@@ -557,6 +558,11 @@ increase the mechanical instabilities in the blastoderm epithelium. We
 thus set to test the individual contribution of mitotic domains and germ
 band to the epithelial instability by performing perturbation
 experiments <em>in vivo</em>.</p>
+<!--TODO: Move definition of a fold to methods-->
+<!--To obtain realistic values where the model matches experimental observations, we performed a sweep across the bending rigidity parameter space in mutant conditions (without the cephalic furrow).-->
+<!--We quantified the tissue dynamics by measuring the distance of each particle to the vitelline envelope across iterations.-->
+<!--When this distance was greater than the maximum particle depths under the ground noise level, we counted it as a fold.-->
+<!--In simulations under a baseline condition, without mitotic domains or germ band extension but with noise, we observe no ectopic fold formation for any bending rigidity values ({@fig:model}e).-->
 <!--These simulations show that above a certain bending rigidity ($K_b^* > 1.0 \times 10^{−4}$), neither the mitotic domains nor the germ band can drive ectopic folding by themselves.-->
 <!--TODO: Add panel with the threshold for counting folds-->
 <!--TODO:AB: Give a physics-based estimation of order of magnitude of dimensionless parameter from literature. Good sanity check to see if values are not off the charts!-->
