Update references in html export

--- a/3-text/furrow.html
+++ b/3-text/furrow.html
@@ -1369,7 +1369,7 @@ in <em><span>D</span>rosophila</em></a>. <em>Development</em>
 class="csl-right-inline">Eritano, A. S., Bromley, C. L., Bolea Albero,
 A., Schütz, L., Wen, F.-L., Takeda, M., Fukaya, T., Sami, M. M.,
 Shibata, T., Lemke, S. &amp; Wang, Y.-C. <a
-href="https://doi.org/10.1016/j.devcel.2020.02.012"><span>Tissue-Scale</span>
+href="https://doi.org/10.1016/j.devcel.2020.02.012">Tissue-scale
 mechanical coupling reduces morphogenetic noise to ensure precision
 during epithelial folding</a>. <em>Dev. Cell</em> <strong>53,</strong>
 212–228.e12 (2020).</div>
@@ -1387,8 +1387,8 @@ gene network</a>. <em>Proc. Natl. Acad. Sci. U. S. A.</em>
 class="csl-right-inline">Turner, F. R. &amp; Mahowald, A. P. <a
 href="https://doi.org/10.1016/0012-1606(77)90225-1">Scanning electron
 microscopy of <em><span>D</span>rosophila melanogaster</em>
-embryogenesis. <span>II</span>. Gastrulation and segmentation</a>.
-<em>Dev. Biol.</em> <strong>57,</strong> 403–416 (1977).</div>
+embryogenesis. II. Gastrulation and segmentation</a>. <em>Dev.
+Biol.</em> <strong>57,</strong> 403–416 (1977).</div>
 </div>
 <div id="ref-Costa1993-qj" class="csl-entry" role="doc-biblioentry">
 <div class="csl-left-margin">11. </div><div
@@ -1491,9 +1491,9 @@ class="csl-right-inline">Gramates, L. S., Agapite, J., Attrill, H.,
 Calvi, B. R., Crosby, M. A., Dos Santos, G., Goodman, J. L.,
 Goutte-Gattat, D., Jenkins, V. K., Kaufman, T., Larkin, A., Matthews, B.
 B., Millburn, G., Strelets, V. B. &amp; the FlyBase Consortium. <a
-href="https://doi.org/10.1093/genetics/iyac035"><span>FlyBase</span>: A
-guided tour of highlighted features</a>. <em>Genetics</em>
-<strong>220,</strong> iyac035 (2022).</div>
+href="https://doi.org/10.1093/genetics/iyac035">FlyBase: A guided tour
+of highlighted features</a>. <em>Genetics</em> <strong>220,</strong>
+iyac035 (2022).</div>
 </div>
 <div id="ref-Vellutini2023-ng" class="csl-entry" role="doc-biblioentry">
 <div class="csl-left-margin">24. </div><div
@@ -1518,19 +1518,17 @@ for biological-image analysis</a>. <em>Nat. Methods</em>
 <div class="csl-left-margin">26. </div><div
 class="csl-right-inline">Rueden, C. T., Schindelin, J., Hiner, M. C.,
 DeZonia, B. E., Walter, A. E., Arena, E. T. &amp; Eliceiri, K. W. <a
-href="https://doi.org/10.1186/s12859-017-1934-z"><span>ImageJ2</span>:
-<span>ImageJ</span> for the next generation of scientific image
-data</a>. <em>BMC Bioinformatics</em> <strong>18,</strong> 529
-(2017).</div>
+href="https://doi.org/10.1186/s12859-017-1934-z">ImageJ2: ImageJ for the
+next generation of scientific image data</a>. <em>BMC
+Bioinformatics</em> <strong>18,</strong> 529 (2017).</div>
 </div>
 <div id="ref-Schmid2019-bm" class="csl-entry" role="doc-biblioentry">
 <div class="csl-left-margin">27. </div><div
 class="csl-right-inline">Schmid, B., Tripal, P., Fraaß, T., Kersten, C.,
 Ruder, B., Grüneboom, A., Huisken, J. &amp; Palmisano, R. <a
 href="https://doi.org/10.1038/s41592-019-0359-1">3Dscript: Animating
-<span>3D/4D</span> microscopy data using a natural-language-based
-syntax</a>. <em>Nat. Methods</em> <strong>16,</strong> 278–280
-(2019).</div>
+3D/4D microscopy data using a natural-language-based syntax</a>.
+<em>Nat. Methods</em> <strong>16,</strong> 278–280 (2019).</div>
 </div>
 <div id="ref-Weigert2018-ti" class="csl-entry" role="doc-biblioentry">
 <div class="csl-left-margin">28. </div><div
@@ -1552,7 +1550,8 @@ Methods</em> <strong>12,</strong> 1139–1142 (2015).</div>
 </div>
 <div id="ref-Matlab2015-nd" class="csl-entry" role="doc-biblioentry">
 <div class="csl-left-margin">30. </div><div
-class="csl-right-inline">Matlab. <span>MATLAB</span>. (2015). at &lt;<a
+class="csl-right-inline">Matlab. <em>MATLAB</em>. (The MathWorks Inc.,
+2015). at &lt;<a
 href="https://www.mathworks.com/products/matlab.html">https://www.mathworks.com/products/matlab.html</a>&gt;</div>
 </div>
 <div id="ref-Berg2019-ab" class="csl-entry" role="doc-biblioentry">
@@ -1567,8 +1566,8 @@ href="https://doi.org/10.1038/s41592-019-0582-9">10.1038/s41592-019-0582-9</a></
 </div>
 <div id="ref-Vellutini2022-ya" class="csl-entry" role="doc-biblioentry">
 <div class="csl-left-margin">32. </div><div
-class="csl-right-inline">Vellutini, B. C. How to make cartographic
-projections using <span>ImSAnE</span>. (2022). doi:<a
+class="csl-right-inline">Vellutini, B. C. <em>How to make cartographic
+projections using ImSAnE</em>. (Zenodo, 2022). doi:<a
 href="https://doi.org/10.5281/zenodo.7628300">10.5281/zenodo.7628300</a></div>
 </div>
 <div id="ref-Arganda-Carreras2006-im" class="csl-entry"
@@ -1578,24 +1577,23 @@ class="csl-right-inline">Arganda-Carreras, I., Sorzano, C. O. S.,
 Marabini, R., Carazo, J. M., Ortiz-de-Solorzano, C. &amp; Kybic, J. in
 <em>Computer vision approaches to medical image analysis</em> 85–95
 (Springer Berlin Heidelberg, 2006). doi:<a
-href="https://doi.org/10.1007/11889762\_8">10.1007/11889762\_8</a></div>
+href="https://doi.org/10.1007/11889762_8">10.1007/11889762_8</a></div>
 </div>
 <div id="ref-Legland2016-cp" class="csl-entry" role="doc-biblioentry">
 <div class="csl-left-margin">34. </div><div
 class="csl-right-inline">Legland, D., Arganda-Carreras, I. &amp; Andrey,
-P. <a
-href="https://doi.org/10.1093/bioinformatics/btw413"><span>MorphoLibJ</span>:
+P. <a href="https://doi.org/10.1093/bioinformatics/btw413">MorphoLibJ:
 Integrated library and plugins for mathematical morphology with
-<span>ImageJ</span></a>. <em>Bioinformatics</em> <strong>32,</strong>
-3532–3534 (2016).</div>
+ImageJ</a>. <em>Bioinformatics</em> <strong>32,</strong> 3532–3534
+(2016).</div>
 </div>
 <div id="ref-Arganda-Carreras2010-la" class="csl-entry"
 role="doc-biblioentry">
 <div class="csl-left-margin">35. </div><div
 class="csl-right-inline">Arganda-Carreras, I., Fernández-González, R.,
 Muñoz-Barrutia, A. &amp; Ortiz-De-Solorzano, C. <a
-href="https://doi.org/10.1002/jemt.20829"><span>3D</span> reconstruction
-of histological sections: Application to mammary gland tissue</a>.
+href="https://doi.org/10.1002/jemt.20829">3D reconstruction of
+histological sections: Application to mammary gland tissue</a>.
 <em>Microsc. Res. Tech.</em> <strong>73,</strong> 1019–1029
 (2010).</div>
 </div>
@@ -1626,16 +1624,15 @@ concepts</a>. <em>F1000Res.</em> <strong>9,</strong> 1373 (2020).</div>
 <div id="ref-The_Inkscape_Project2003-ht" class="csl-entry"
 role="doc-biblioentry">
 <div class="csl-left-margin">39. </div><div class="csl-right-inline">The
-Inkscape Project. Inkscape: Open source scalable vector graphics editor.
-(2003). at &lt;<a
+Inkscape Project. <em>Inkscape: Open source scalable vector graphics
+editor</em>. (2003). at &lt;<a
 href="https://inkscape.org">https://inkscape.org</a>&gt;</div>
 </div>
 <div id="ref-HandBrake_Team2003-fq" class="csl-entry"
 role="doc-biblioentry">
 <div class="csl-left-margin">40. </div><div
-class="csl-right-inline">HandBrake Team. <span>HandBrake</span>: <span
-class="nocase">HandBrake’s</span> main development repository. (2003).
-at &lt;<a
+class="csl-right-inline">HandBrake Team. <em>HandBrake: HandBrake’s main
+development repository</em>. (Github, 2003). at &lt;<a
 href="https://github.com/HandBrake/HandBrake">https://github.com/HandBrake/HandBrake</a>&gt;</div>
 </div>
 <div id="ref-Vellutini2023-ix" class="csl-entry" role="doc-biblioentry">
@@ -1649,15 +1646,16 @@ href="https://doi.org/10.5281/zenodo.7781917">10.5281/zenodo.7781917</a></div>
 <div id="ref-R_Core_Team1993-ki" class="csl-entry"
 role="doc-biblioentry">
 <div class="csl-left-margin">42. </div><div class="csl-right-inline">R
-Core Team. R: A language and environment for statistical computing.
-(1993). at &lt;<a
+Core Team. <em>R: A language and environment for statistical
+computing</em>. (R Foundation for Statistical Computing, 1993). at
+&lt;<a
 href="http://www.r-project.org">http://www.r-project.org</a>&gt;</div>
 </div>
 <div id="ref-RStudio_Team2011-wr" class="csl-entry"
 role="doc-biblioentry">
 <div class="csl-left-margin">43. </div><div
-class="csl-right-inline">RStudio Team. <span>RStudio</span>: Integrated
-development environment for <span>R</span>. (2011). at &lt;<a
+class="csl-right-inline">RStudio Team. <em>RStudio: Integrated
+development environment for r</em>. (RStudio, PBC., 2011). at &lt;<a
 href="http://www.rstudio.com/">http://www.rstudio.com/</a>&gt;</div>
 </div>
 <div id="ref-Granger2021-zg" class="csl-entry" role="doc-biblioentry">
