Add missing fly stock of laser ablations

--- a/3-text/furrow.html
+++ b/3-text/furrow.html
@@ -853,11 +853,12 @@ double mutant stable line is weak, we imaged the progeny of
 <em>btd<sup>XA</sup>/FM7c, Kr-GFP;; Gap43-mCherry,
 stg<sup>2</sup>/Gap43-mCherry</em> flies, identifying <em>btd</em>
 homozygozity by the GFP, and <em>stg</em> homozygozity by the lack of
-cell divisions after gastrulation. The wildtype stocks contain the Gap
-marker in the Oregon-R genetic background. We obtained the founder fly
-stocks from the Bloomington Drosophila Stock Center and the Kyoto Stock
-Center and deposited the lines in the MPI-CBG stock collection. The
-complete list of FlyBase<span class="citation"
+cell divisions after gastrulation. For laser ablations, we used a
+<em>moe-GFP</em> line (gift from Eli Knust). The wildtype stocks contain
+the Gap marker in the Oregon-R genetic background. We obtained the
+founder fly stocks from the Bloomington Drosophila Stock Center and the
+Kyoto Stock Center and deposited the lines in the MPI-CBG stock
+collection. The complete list of FlyBase<span class="citation"
 data-cites="Gramates2022-xe"><sup><a href="#ref-Gramates2022-xe"
 role="doc-biblioref">23</a></sup></span> accession numbers and genotypes
 is available in the project’s data repository<span class="citation"
