Update genetic patterning figure

--- a/3-text/furrow.html
+++ b/3-text/furrow.html
@@ -288,7 +288,7 @@ For the characterization of the CF, I chose the bending rigidity of the blastode
 <p>21. Andrioli, L. P., Digiampietri, L. A., Barros, L. P. de &amp; Machado-Lima, A. Huckebein is part of a combinatorial repression code in the anterior blastoderm. <em>Dev. Biol.</em> <strong>361,</strong> 177–185 (2012).</p>
 </div>
 <div id="ref-Cadigan1994-hz">
-<p>22. Cadigan, K. M., Grossniklaus, U. &amp; Gehring, W. J. Localized expression of <em>sloppy paired</em> protein maintains the polarity of <em>drosophila</em> parasegments. <em>Genes Dev.</em> <strong>8,</strong> 899–913 (1994).</p>
+<p>22. Cadigan, K. M., Grossniklaus, U. &amp; Gehring, W. J. Localized expression of <em>sloppy paired</em> protein maintains the polarity of <em>D</em><em>rosophila</em> parasegments. <em>Genes Dev.</em> <strong>8,</strong> 899–913 (1994).</p>
 </div>
 <div id="ref-Kondo2013-gy">
 <p>23. Kondo, T. &amp; Hayashi, S. Mitotic cell rounding accelerates epithelial invagination. <em>Nature</em> <strong>494,</strong> 125–129 (2013).</p>
@@ -348,7 +348,7 @@ For the characterization of the CF, I chose the bending rigidity of the blastode
 <p>41. Arganda-Carreras, I., Sorzano, C. O. S., Marabini, R., Carazo, J. M., Ortiz-de-Solorzano, C. &amp; Kybic, J. in <em>Computer vision approaches to medical image analysis</em> 85–95 (Springer Berlin Heidelberg, 2006). doi:<a href="https://doi.org/10.1007/11889762_8">10.1007/11889762_8</a></p>
 </div>
 <div id="ref-Legland2016-cp">
-<p>42. Legland, D., Arganda-Carreras, I. &amp; Andrey, P. MorphoLibJ: Integrated library and plugins for mathematical morphology with imagej. <em>Bioinformatics</em> <strong>32,</strong> 3532–3534 (2016).</p>
+<p>42. Legland, D., Arganda-Carreras, I. &amp; Andrey, P. MorphoLibJ: Integrated library and plugins for mathematical morphology with ImageJ. <em>Bioinformatics</em> <strong>32,</strong> 3532–3534 (2016).</p>
 </div>
 <div id="ref-Arganda-Carreras2010-la">
 <p>43. Arganda-Carreras, I., Fernández-González, R., Muñoz-Barrutia, A. &amp; Ortiz-De-Solorzano, C. 3D reconstruction of histological sections: Application to mammary gland tissue. <em>Microsc. Res. Tech.</em> <strong>73,</strong> 1019–1029 (2010).</p>
