Fix some references

--- a/3-text/furrow.html
+++ b/3-text/furrow.html
@@ -312,7 +312,7 @@ For the characterization of the CF, I chose the bending rigidity of the blastode
 <p>19. Lécuyer, E., Yoshida, H., Parthasarathy, N., Alm, C., Babak, T., Cerovina, T., Hughes, T. R., Tomancak, P. &amp; Krause, H. M. Global analysis of mRNA localization reveals a prominent role in organizing cellular architecture and function. <em>Cell</em> <strong>131,</strong> 174–187 (2007).</p>
 </div>
 <div id="ref-Andrioli2004-qi">
-<p>20. Andrioli, L. P., Oberstein, A. L., Corado, M. S. G., Yu, D. &amp; Small, S. Groucho-dependent repression by sloppy-paired 1 differentially positions anterior pair-rule stripes in the <em>Drosophila</em> embryo. <em>Dev. Biol.</em> <strong>276,</strong> 541–551 (2004).</p>
+<p>20. Andrioli, L. P., Oberstein, A. L., Corado, M. S. G., Yu, D. &amp; Small, S. Groucho-dependent repression by Sloppy-paired 1 differentially positions anterior pair-rule stripes in the <em>D</em><em>rosophila</em> embryo. <em>Dev. Biol.</em> <strong>276,</strong> 541–551 (2004).</p>
 </div>
 <div id="ref-Andrioli2012-fv">
 <p>21. Andrioli, L. P., Digiampietri, L. A., Barros, L. P. de &amp; Machado-Lima, A. Huckebein is part of a combinatorial repression code in the anterior blastoderm. <em>Dev. Biol.</em> <strong>361,</strong> 177–185 (2012).</p>
@@ -339,13 +339,13 @@ For the characterization of the CF, I chose the bending rigidity of the blastode
 <p>28. Gramates, L. S., Agapite, J., Attrill, H., Calvi, B. R., Crosby, M. A., Dos Santos, G., Goodman, J. L., Goutte-Gattat, D., Jenkins, V. K., Kaufman, T., Larkin, A., Matthews, B. B., Millburn, G., Strelets, V. B. &amp; the FlyBase Consortium. FlyBase: A guided tour of highlighted features. <em>Genetics</em> <strong>220,</strong> iyac035 (2022).</p>
 </div>
 <div id="ref-Vellutini2023-ng">
-<p>29. Vellutini, B. C., Cuenca, M. B., Krishna, A., Szałapak, A., Modes, C. D. &amp; Tomančák, P. Repository for: Pre-patterned epithelial invagination prevents mechanical instability during fly gastrulation. (2023). doi:<a href="https://doi.org/10.5281/zenodo.7781947">10.5281/zenodo.7781947</a></p>
+<p>29. Vellutini, B. C., Cuenca, M. B., Krishna, A., Szałapak, A., Modes, C. D. &amp; Tomančák, P. Repository for: Patterned embryonic invagination evolved in response to mechanical instability. (2023). doi:<a href="https://doi.org/10.5281/zenodo.7781947">10.5281/zenodo.7781947</a></p>
 </div>
 <div id="ref-Sander1985-sg">
 <p>30. Sander, K. Experimental egg activation in lower dipterans (Psychoda, Smittia) by low osmolality. <em>Int. J. Invertebr. Reprod. Dev.</em> <strong>8,</strong> 175–183 (1985).</p>
 </div>
 <div id="ref-Garcia-Solache2010-lz">
-<p>31. García-Solache, M., Jaeger, J. &amp; Akam, M. A systematic analysis of the gap gene system in the moth midge clogmia albipunctata. <em>Dev. Biol.</em> <strong>344,</strong> 306–318 (2010).</p>
+<p>31. García-Solache, M., Jaeger, J. &amp; Akam, M. A systematic analysis of the gap gene system in the moth midge <em>C</em><em>logmia</em> <em>a</em><em>lbipunctata</em>. <em>Dev. Biol.</em> <strong>344,</strong> 306–318 (2010).</p>
 </div>
 <div id="ref-Choi2018-fg">
 <p>32. Choi, H. M. T., Schwarzkopf, M., Fornace, M. E., Acharya, A., Artavanis, G., Stegmaier, J., Cunha, A. &amp; Pierce, N. A. Third-generation <em>in situ</em> hybridization chain reaction: Multiplexed, quantitative, sensitive, versatile, robust. <em>Development</em> <strong>145,</strong> (2018).</p>
@@ -375,7 +375,7 @@ For the characterization of the CF, I chose the bending rigidity of the blastode
 <p>40. Berg, S., Kutra, D., Kroeger, T., Straehle, C. N., Kausler, B. X., Haubold, C., Schiegg, M., Ales, J., Beier, T., Rudy, M., Eren, K., Cervantes, J. I., Xu, B., Beuttenmueller, F., Wolny, A., Zhang, C., Koethe, U., Hamprecht, F. A. &amp; Kreshuk, A. ilastik: Interactive machine learning for (bio)image analysis. <em>Nat. Methods</em> (2019). doi:<a href="https://doi.org/10.1038/s41592-019-0582-9">10.1038/s41592-019-0582-9</a></p>
 </div>
 <div id="ref-Vellutini2022-ya">
-<p>41. Vellutini, B. C. <em>How to make cartographic projections using imsane</em>. (Zenodo, 2022). doi:<a href="https://doi.org/10.5281/zenodo.7628300">10.5281/zenodo.7628300</a></p>
+<p>41. Vellutini, B. C. <em>How to make cartographic projections using ImSAnE</em>. (Zenodo, 2022). doi:<a href="https://doi.org/10.5281/zenodo.7628300">10.5281/zenodo.7628300</a></p>
 </div>
 <div id="ref-Schmied2020-ip">
 <p>42. Schmied, C. &amp; Jambor, H. K. Effective image visualization for publications - a workflow using open access tools and concepts. <em>F1000Res.</em> <strong>9,</strong> 1373 (2020).</p>
@@ -396,7 +396,7 @@ For the characterization of the CF, I chose the bending rigidity of the blastode
 <p>47. Trushko, A., Di Meglio, I., Merzouki, A., Blanch-Mercader, C., Abuhattum, S., Guck, J., Alessandri, K., Nassoy, P., Kruse, K., Chopard, B. &amp; Roux, A. Buckling of an epithelium growing under spherical confinement. <em>Dev. Cell</em> <strong>54,</strong> 655–668.e6 (2020).</p>
 </div>
 <div id="ref-Krishna2023-hu">
-<p>48. Krishna, A., Szałapak, A., Vellutini, B. C., Cuenca, M. B., Tomančák, P. &amp; Modes, C. D. Model and simulations for: Pre-patterned epithelial invagination prevents mechanical instability during fly gastrulation. (2023). doi:<a href="https://doi.org/10.5281/zenodo.7784906">10.5281/zenodo.7784906</a></p>
+<p>48. Krishna, A., Szałapak, A., Vellutini, B. C., Cuenca, M. B., Tomančák, P. &amp; Modes, C. D. Model and simulations for: Patterned embryonic invagination evolved in response to mechanical instability. (2023). doi:<a href="https://doi.org/10.5281/zenodo.7784906">10.5281/zenodo.7784906</a></p>
 </div>
 <div id="ref-The_Inkscape_Project2003-ht">
 <p>49. The Inkscape Project. <em>Inkscape: Open source scalable vector graphics editor</em>. (2003). at &lt;<a href="https://inkscape.org">https://inkscape.org</a>&gt;</p>
@@ -405,7 +405,7 @@ For the characterization of the CF, I chose the bending rigidity of the blastode
 <p>50. HandBrake Team. <em>HandBrake: HandBrake’s main development repository</em>. (Github, 2003). at &lt;<a href="https://github.com/HandBrake/HandBrake">https://github.com/HandBrake/HandBrake</a>&gt;</p>
 </div>
 <div id="ref-Vellutini2023-ix">
-<p>51. Vellutini, B. C., Cuenca, M. B., Krishna, A., Szałapak, A., Modes, C. D. &amp; Tomančák, P. Figures and videos for: Pre-patterned epithelial invagination prevents mechanical instability during fly gastrulation. (2023). doi:<a href="https://doi.org/10.5281/zenodo.7781916">10.5281/zenodo.7781916</a></p>
+<p>51. Vellutini, B. C., Cuenca, M. B., Krishna, A., Szałapak, A., Modes, C. D. &amp; Tomančák, P. Figures and videos for: Patterned embryonic invagination evolved in response to mechanical instability. (2023). doi:<a href="https://doi.org/10.5281/zenodo.7781916">10.5281/zenodo.7781916</a></p>
 </div>
 <div id="ref-R_Core_Team1993-ki">
 <p>52. R Core Team. <em>R: A language and environment for statistical computing</em>. (R Foundation for Statistical Computing, 1993). at &lt;<a href="http://www.r-project.org">http://www.r-project.org</a>&gt;</p>
@@ -417,7 +417,7 @@ For the characterization of the CF, I chose the bending rigidity of the blastode
 <p>54. Granger, B. E. &amp; Perez, F. Jupyter: Thinking and storytelling with code and data. <em>Comput. Sci. Eng.</em> <strong>23,</strong> 7–14 (2021).</p>
 </div>
 <div id="ref-Ashburner2005-ym">
-<p>55. Ashburner, M., Golic, K. G. &amp; Hawley, R. S. <em><span style="font-style:normal;">Drosophila</span>: A laboratory handbook</em>. (Cold Spring Harbor Laboratory Press, 2005). at &lt;<a href="https://www.worldcat.org/title/drosophila-a-laboratory-handbook/oclc/56324270">https://www.worldcat.org/title/drosophila-a-laboratory-handbook/oclc/56324270</a>&gt;</p>
+<p>55. Ashburner, M., Golic, K. G. &amp; Hawley, R. S. <em><span style="font-style:normal;">Drosophila</span>: A laboratory handbook</em>. (Cold Spring Harbor Laboratory Press, 2005).</p>
 </div>
 <div id="ref-Campos-Ortega1985-ma">
 <p>56. Campos-Ortega, J. A. &amp; Hartenstein, V. <em>The embryonic development of <span style="font-style:normal;">Drosophila melanogaster</span></em>. (Springer Berlin Heidelberg, 1985). doi:<a href="https://doi.org/10.1007/978-3-662-02454-6">10.1007/978-3-662-02454-6</a></p>
