Fix column names on screen table

--- a/3-text/furrow.html
+++ b/3-text/furrow.html
@@ -718,9 +718,9 @@ For the characterization of the CF, I chose the bending rigidity of the blastode
 </colgroup>
 <thead>
 <tr class="header">
-<th>name</th>
-<th>symbol</th>
-<th>allele/deletion</th>
+<th>gene name</th>
+<th>gene symbol</th>
+<th>allele/deficiency</th>
 <th>phenotype</th>
 </tr>
 </thead>
